WIP: Support Swift container provisioning.

--- a/.env.test
+++ b/.env.test
@@ -3,6 +3,7 @@ SECRET_KEY='tests'
 DATABASE_URL='postgres://localhost/opencraft'
 INSTANCE_MYSQL_URL='mysql://root@localhost'
 INSTANCE_MONGO_URL='mongodb://localhost'
+SWIFT_ENABLE=true
 HUEY_ALWAYS_EAGER=true
 OPENSTACK_USER='test'
 OPENSTACK_PASSWORD='pass'
