--- a/requirements.txt
+++ b/requirements.txt
@@ -80,6 +80,7 @@ python-dateutil==2.4.2
 python-keystoneclient==1.7.1
 python-neutronclient==3.1.0
 python-novaclient==2.31.0
+python-swiftclient==3.0.0
 pytz==2015.6
 PyYAML==3.10
 redis==2.10.3
