--- a/instance/templates/instance/ansible/vars.yml
+++ b/instance/templates/instance/ansible/vars.yml
@@ -14,6 +14,12 @@ EDXAPP_PREVIEW_LMS_BASE: '{{ instance.domain }}'
 EDXAPP_CMS_SITE_NAME: '{{ instance.studio_domain }}'
 EDXAPP_CMS_BASE: '{{ instance.studio_domain }}'
 
+# Enable OpenStack settings to be able to use Swift.  These three variables are ignored in versions
+# of the configuration repo that don't have the openstack role yet, so it's safe to include them.
+EDXAPP_SETTINGS: 'openstack'
+XQUEUE_SETTINGS: 'openstack_settings'
+COMMON_VHOST_ROLE_NAME: 'openstack'
+
 # Forum environment settings
 FORUM_RACK_ENV: 'production'
 FORUM_SINATRA_ENV: 'production'
