Fix JS tests - List JS files explicitly to make load order predictable
Previously, it could fail to load the InstanceApp module in the
`instance/static/js/src/openedx_appserver.js` when
`instance/static/js/src/instance.js` would be loaded second.

--- a/instance/tests/js/spec/javascripts/support/jasmine.yml
+++ b/instance/tests/js/spec/javascripts/support/jasmine.yml
@@ -20,7 +20,8 @@ src_files:
     - static/external/js/restangular.min.js
     - static/external/js/angular-mocks.js
     - static/external/js/jshint.js
-    - instance/static/js/src/*.js
+    - instance/static/js/src/instance.js
+    - instance/static/js/src/openedx_appserver.js
 
 # stylesheets
 #
